--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "lib/*": ["src/lib/*"]
     }
   },
-  "include": ["src/*"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
