--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "framer-motion": "^12.15.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.525.0",
+    "pdfjs-dist": "^5.4.54",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-pdf": "^10.0.1",
     "react-router-dom": "^7.7.1",
     "swiper": "^11.2.8",
     "tailwindcss": "^4.1.8",
-    "turbo": "^2.5.5"
+    "turbo": "^2.5.5",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
